--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
     <section class="hero">
         <div class="overlay"></div>
         <video id="hero-video" autoplay muted loop playsinline>
-            <source src="C:\Users\User\Desktop\video bg\pizza_hero2.mp4" type="video/mp4">
+            <source src="https://raw.githubusercontent.com/growbook-techologies/RR-PIZZA-SITE/main/pizza_hero2.mp4" type="video/mp4">
         </video>
         <div class="hero-content">
             <h1>Artisan Pizza <br>Delivered Fast.</h1>
@@ -630,4 +630,5 @@
         renderMenu();
     </script>
 </body>
+
 </html>
